production/production-inner/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: default-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: arthur-sticky-session
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-max-age: "1800"
    nginx.ingress.kubernetes.io/proxy-body-size: 0
    cert-manager.io/issuer: "ingress-issuer"
spec:
  tls:
    - secretName: gitea-le
      hosts:
        - git.jacksonrakena.com
        - minecraft-map.jacksonrakena.com
        - map.mc.jackson.omg.lol
        - mc.jackson.omg.lol
    - secretName: rakena-cert
      hosts:
        - vault.rakena.co.nz
  ingressClassName: default-class
  rules:
    - host: vault.rakena.co.nz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
    - host: mc.jackson.omg.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 8080
    - host: map.mc.jackson.omg.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 8080
    - host: minecraft-map.jacksonrakena.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 8080
    - host: minecraft.jacksonrakena.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 80
    - host: git.jacksonrakena.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 80
    - host: api.gradekeeper.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gradekeeper-server
                port:
                  number: 80
